# tracker

./: .dockerignore  .env.example  .gitignore  .gitlab-ci.yml  Dockerfile  README.md  docker-compose.test.yml  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 2025_07_13_1844-0fda0a3be5a5_init.py  2025_07_19_1624-5717af30abf6_initial.py  2025_07_20_1914-241b99d9dbfc_initial.py
src/: config.py  database.py  exceptions_handler.py  main.py  models.py  schemas.py
src/core/dynamic_json/: __init__.py  dynamic_json.py  exceptions.py  types.py
src/exceptions/: service_exceptions.py
src/presentation/: callbacks.py  middleware.py  router.py  states.py  utils.py
src/presentation/constants/: __init__.py  date.py  text.py
src/presentation/routers/: __init__.py  create_tracker.py  create_tracker_router.py  data.py  general.py  tracker_control.py
src/presentation/utils/: __init__.py  date.py  keyboard.py  tracker_description.py  translations.py  update_message.py
src/schemas/: __init__.py  result.py  tracker.py  user.py
src/services/: __init__.py  tracker_service.py
src/services/database/: data_service.py  tracker_service.py  user_service.py
src/tracker/: config.py  database.py  exceptions_handler.py  main.py  models.py
src/tracker/exceptions/: __init__.py
src/use_cases/: __init__.py  create_tracker.py  tracker_control.py  tracker_data.py
tests/: .env.test.example  config.py  conftest.py
tests/integration/: conftest.py  test_data_service.py  test_tracker_service.py  test_user_service.py
tests/unit/: conftest.py  test_dynamic_json.py
(+40 files in other folders)
